# buildany

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
