[package]
name = "buildany"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
tempdir = "0.3.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
