[package]
name = "buildany"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = [
    "derive",
    "env",
    "color",
    "suggestions",
] }
clap_complete = "4.5.1"
console = "0.15.8"
duct = "0.13.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
